[tool.poetry]
name = "file-provider"
version = "0.1.0"
description = "A flexible file management system supporting local and S3 storage"
authors = ["mpace <mpace@nuveminc.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
boto3 = "^1.26.0"
numpy = "^1.24.0"  # Updated numpy version
pyarrow = "^11.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^7.2.0"
moto = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"